# ML-CPP-FW

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
data/: input_data.txt  input_data_inverted.txt
inc/: Activations.hpp  Loss.hpp  Model.hpp  Utilities.hpp  test.hpp
lib/: CMakeLists.txt
lib/NNFramework/: Activations  CMakeLists.txt  Layers  NNFramework
lib/NNFramework/inc/: CMakeLists.txt
lib/NNFramework/inc/Common/: Common.hpp
lib/NNFramework/inc/Core/: Activations.hpp  Layers.hpp  Loss.hpp  Metrics.hpp  Model.hpp  ModelConfiguration.hpp  Optimizers.hpp  WeightInitializer.hpp
lib/NNFramework/inc/Utilities/: DataHandler.hpp
lib/NNFramework/src/Core/: Layers.cpp  Model.cpp  WeightInitializer.cpp
lib/NNFramework/src/Utilities/: DataHandler.cpp
lib/matplotplusplus/: .gitignore
src/: CMakeLists.txt  Model.cpp  main.cpp
src/NNFramework/: Activations  CMakeLists.txt  Loss  Metrics  Model
src/NNFramework/inc/Core/: Activations.hpp  Loss.hpp  Metrics.hpp  Model.hpp
src/NNFramework/src/Core/: Model.cpp
tools/tensorflow_ref_model/: tensorflow_model.py
